# itbnb

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-gh-pages.yml  lint.yml  python-app.yml
itbnb/: __init__.py  tbnb.py  threshold.py
itbnb/tests/: test_optimizer.py  test_sklearn.py  test_tbnb.py
itbnb/utils/: confusion.py  decision.py  validation.py
