[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itbnb"
version = "0.1.0"
authors = [
  { name = "Francesco Tiddia", email = "f.tiddia7@studenti.com" },
]
description = "Threshold-Based and Iterative Threshold-Based Naive Bayes classifier"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "scikit-learn>=1.4.2",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

lint = [
  "ruff>=0.4",
  "black>=23.3",
]

doc = [
  "sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx-design",
  "sphinx-gallery",
]

[project.urls]
Homepage = "https://github.com/francescotiddia/itbnb"
Issues = "https://github.com/francescotiddia/itbnb/issues"

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
force-exclude = "itbnb/_version.py"

[tool.ruff]
# max line length for black
line-length = 88
target-version = "py38"
exclude=[
    ".git",
    "__pycache__",
    "dist",
    "doc/_build",
    "doc/auto_examples",
    "build",
    "itbnb/_version.py",
]

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]
"doc/conf.py"=["E402"]
"doc/_templates/numpydoc_docstring.py"=["F821", "W292"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --color=yes"
doctest_optionflags = "NORMALIZE_WHITESPACE"
